# DexScript

./: .pre-commit-config.yaml  DATAPOLICY.md  LICENSE  README.md  changelog.md  dexscript.gyat  dexscript.py  installer.gyat  installer.py  pyproject.toml  uninstaller.py  version.txt  wip.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pre-commit.yml  ruff.yml
DexScript/: dexscript.py
DexScript/github/: installer.py  migration.py  uninstaller.py
DexScript/github/__EXCLUDED__/: installer.py
DexScript/package/: __init__.py  api.py  cog.py  commands.py  parser.py  utils.py
examples/: package.yml
