[tool.poetry]
name = "dexscript"
version = "0.4.3.2"
description = ""
authors = ["dotzz <official.dotzz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
lint.ignore = ["E203", "F704", "F706", "F821"]
lint.extend-select = ["E501", "I001"]